--- a/css/style.css
+++ b/css/style.css
@@ -4,24 +4,30 @@
   box-sizing: border-box;
 }
 
-.wrapper {
-  width: 500px;
-  margin: auto;
-  background-color: black;
-  margin-top: 50px;
-  border-radius: 20px;
-  padding: 50px 20px 10px 20px;
+body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.wrapper .screen textarea {
+.wrapper {
+  width: 400px;
+  background-color: black;
+  border-radius: 20px;
+  padding: 10px 20px 10px 20px;
+}
+
+.wrapper .screen input {
   resize: none;
   width: 100%;
   height: 100px;
   text-align: right;
   padding-top: 10px;
-  font-size: 30px;
+  font-size: 45px;
   background-color: black;
-  border: 1px solid lightgrey;
+  border: none;
   color: lightgray;
   border-radius: 20px;
   padding-right: 20px;
@@ -39,7 +45,7 @@
 }
 
 .keys .row button {
-  width: 100px;
+  width: 80px;
   height: 60px;
   font-size: 20px;
   background-color: rgb(8, 8, 8);
@@ -62,5 +68,10 @@
 
 .equal {
   background-color: slategray !important;
+  color: black;
+}
+
+.active {
+  background-color: white !important;
   color: black;
 }
